<?xml version="1.0"?>
<package format="3">
  <name>abb_irb120_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and meshes for the ABB IRB 120 (IRB120-3/0.6).</description>

  <maintainer email="daniel.ruan@princeton.edu">Daniel Ruan</maintainer>
  <author>Daniel Ruan (Princeton University)</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps for xacro + visualization workflows -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Commonly used in launch files (optional but typical) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
